--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API provedora dos rescursos da aplicação BTM",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec \" babel-node index.js\"",
+    "start": "nodemon  index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,6 +36,7 @@
     "mongoose": "^5.0.14"
   },
   "devDependencies": {
-    "chalk": "^2.4.0"
+    "chalk": "^2.4.0",
+    "standard": "^11.0.1"
   }
 }
