--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API provedora dos rescursos da aplicação BTM",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon  index.js",
+    "start": "nodemon  ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
