--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "API provedora dos rescursos da aplicação BTM",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon  ./index.js",
+    "start": "node  ./index.js",
+    "dev": "nodemon  ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mayconrebordao/btm-api.git"
+    "url": "git+https://gitlab.com/r.maycon/btm-api.git"
+  },
+  "engines": {
+    "node": "10.4.1",
+    "npm": "6.1.0"
   },
   "keywords": [
     "node",
@@ -24,19 +29,21 @@
   "author": "Maycon de Arruda Rebordão <r.maycon1122@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mayconrebordao/btm-api/issues"
+    "url": "https://gitlab.com/r.maycon/btm-api/issues"
   },
-  "homepage": "https://github.com/mayconrebordao/btm-api#readme",
+  "homepage": "https://gitlab.com/r.maycon/btm-api#readme",
   "dependencies": {
-    "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "chalk": "^2.4.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.14"
+    "mongoose": "^5.1.5"
   },
   "devDependencies": {
-    "chalk": "^2.4.0",
+    "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "nodemon": "^1.17.5",
     "standard": "^11.0.1"
   }
 }
